--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -7,7 +7,8 @@
             "services": "خدماتنا",
             "works": "أعمالنا",
             "start-now": "ابدأ مشروعك",
-            "contact": "تواصل معنا"
+            "contact": "تواصل معنا",
+            "careers": "الوظائف"
         },
         "hero": {
             "title": "نُطوّر تطبيقات ويب وجوال مذهلة",
@@ -65,9 +66,6 @@
                 "title": "تحسين محركات البحث",
                 "desc": "حسّن ترتيبك واجذب المزيد من الزيارات العضوية."
             }
-        },
-        "footer": {
-            "rights": "جميع الحقوق محفوظة."
         }
     },
     "about": {
@@ -339,6 +337,206 @@
             "subtitle": "تفضّل البريد أو الهاتف؟ متاحون من الأحد إلى الخميس.",
             "address": "المنامة، مملكة البحرين",
             "hours": "الأحد–الخميس • 9:00–17:00 (AST)"
+        }
+    },
+    "footer": {
+        "tagline": "نصمّم ونطوّر برمجيات الويب والجوال والسحابة لفرق العمل الحقيقية.",
+        "headings": {
+            "company": "الشركة",
+            "contact": "التواصل",
+            "newsletter": "النشرة البريدية"
+        },
+        "links": {
+            "about": "من نحن",
+            "services": "الخدمات",
+            "start": "ابدأ مشروعًا",
+            "contact": "تواصل معنا",
+            "careers": "الوظائف",
+            "privacy": "الخصوصية",
+            "terms": "الشروط"
+        },
+        "address": "المنامة، مملكة البحرين",
+        "newsletter": {
+            "copy": "تحديثات بين حين وآخر. بدون إزعاج.",
+            "placeholder": "بريدك الإلكتروني",
+            "action": "اشترك",
+            "thanks": "شكرًا لك! تم اشتراكك."
+        }
+    },
+    "careers": {
+        "badge": "الوظائف",
+        "title": "انضم إلى فريق يبني منتجات حقيقية",
+        "subtitle": "فريق من المصممين والمطورين نبني برمجيات ويب وجوال وسحابة لفرق العمل في المنطقة.",
+        "roles": {
+            "badge": "وظائف متاحة",
+            "title": "ساعدنا في بناء القادم",
+            "subtitle": "إذا كنت تحب الإطلاق المستمر والاهتمام بالتفاصيل، فستجد مكانك هنا.",
+            "applyPrompt": "هل يناسبك ذلك؟",
+            "apply": "قدّم الآن",
+            "empty": "لا توجد وظائف مطابقة لخياراتك.",
+            "fe": {
+                "title": "مهندس واجهات أمامية",
+                "dept": "الهندسة",
+                "summary": "بناء واجهات React وTypeScript وأنظمة تصميم قابلة لإعادة الاستخدام."
+            },
+            "rn": {
+                "title": "مهندس React Native",
+                "dept": "الهندسة",
+                "summary": "تطوير تطبيقات جوال عالية الجودة مع دعم عدم الاتصال والمهام الخلفية."
+            },
+            "be": {
+                "title": "مهندس خلفيات",
+                "dept": "الهندسة",
+                "summary": "بناء واجهات برمجة، وأنظمة مصادقة، وأنابيب بيانات باستخدام NestJS وPostgres."
+            },
+            "pm": {
+                "title": "مدير منتج",
+                "dept": "المنتج",
+                "summary": "قيادة الاكتشاف، وخطط الطريق، والتسليم مع الفرق متعددة التخصصات."
+            },
+            "location": {
+                "remote": "عن بُعد",
+                "manama": "المنامة، البحرين",
+                "hybrid": "هجينة"
+            },
+            "type": {
+                "fulltime": "دوام كامل",
+                "contract": "عقد",
+                "intern": "تدريب"
+            }
+        },
+        "filters": {
+            "search": "ابحث عن وظيفة…",
+            "dept": "كل الأقسام",
+            "location": "كل المواقع"
+        },
+        "benefits": {
+            "badge": "المزايا",
+            "title": "ما الذي ستحصل عليه",
+            "remote": {
+                "title": "دعم العمل عن بُعد",
+                "desc": "خيارات هجينة/عن بُعد وساعات مرنة."
+            },
+            "learning": {
+                "title": "ميزانية للتعلم",
+                "desc": "كتب، دورات، ومؤتمرات."
+            },
+            "hardware": {
+                "title": "معدات ممتازة",
+                "desc": "أجهزة وأدوات حديثة تحتاجها فعلاً."
+            },
+            "timeoff": {
+                "title": "إجازات",
+                "desc": "إجازات سنوية سخية وإجازات رسمية."
+            },
+            "wellbeing": {
+                "title": "الرفاهية",
+                "desc": "وتيرة عمل صحية ومستدامة — دون مبالغة."
+            },
+            "comp": {
+                "title": "تعويضات تنافسية",
+                "desc": "رواتب عادلة مع فرص للنمو."
+            }
+        },
+        "process": {
+            "badge": "عملية التوظيف",
+            "title": "كيف نوظّف",
+            "apply": {
+                "title": "التقديم",
+                "desc": "أرسل سيرتك وروابطك وملاحظة قصيرة."
+            },
+            "exercise": {
+                "title": "مهمة عملية",
+                "desc": "مهمة صغيرة من الواقع — بلا تعقيد."
+            },
+            "chat": {
+                "title": "لقاء الفريق",
+                "desc": "تتعرف على الفريق وتناقش أسلوبك."
+            },
+            "offer": {
+                "title": "عرض وظيفي",
+                "desc": "نتفق على الدور والنمو وتاريخ البدء."
+            }
+        },
+        "cta": {
+            "title": "لم تجد وظيفة مناسبة؟",
+            "subtitle": "نحب التعرف على المواهب دائمًا. أرسل سيرتك وأخبرنا بما ترغب في العمل عليه.",
+            "button": "أرسل سيرتك"
+        },
+        "details": {
+            "back": "العودة إلى الوظائف",
+            "respTitle": "ماذا ستفعل",
+            "reqTitle": "ماذا ستضيف للفريق",
+            "apply": "قدّم الآن",
+            "applyExternal": "التقديم عبر النظام",
+            "contact": "لديك سؤال؟",
+            "common": {
+                "resp": {
+                    "ownUI": "تنفيذ ميزات الواجهة من البداية للنهاية بجودة عالية.",
+                    "collabDesign": "التعاون مع التصميم والمنتج على تدفقات المستخدم.",
+                    "testShip": "إطلاق تدريجي مع اختبارات ومراجعات."
+                },
+                "req": {
+                    "gitCi": "إجادة Git والمراجعات وCI/CD."
+                }
+            },
+            "fe": {
+                "req": {
+                    "reactTs": "خبرة قوية في React وTypeScript.",
+                    "accessibility": "اهتمام بإتاحة الوصول والأداء."
+                }
+            },
+            "rn": {
+                "resp": {
+                    "features": "بناء الميزات عبر iOS/Android باستخدام React Native.",
+                    "performance": "تحسين أداء التطبيق."
+                },
+                "req": {
+                    "rnExpo": "خبرة في React Native وExpo.",
+                    "nativeBasics": "إلمام بأساسيات الوحدات الأصلية وإدارة الحالة."
+                }
+            },
+            "be": {
+                "resp": {
+                    "apis": "تصميم وتنفيذ واجهات REST/GraphQL قوية.",
+                    "security": "تطبيق المصادقة وRBAC وتعزيز الأمان.",
+                    "observability": "إضافة السجلات والقياسات والتتبع."
+                },
+                "req": {
+                    "nestNode": "إتقان NestJS/Node.js.",
+                    "sql": "إجادة SQL ونمذجة البيانات."
+                }
+            },
+            "pm": {
+                "resp": {
+                    "discovery": "قيادة الاكتشاف وتحديد نتائج واضحة.",
+                    "roadmaps": "إدارة خرائط الطريق والتواصل مع الأطراف المعنية.",
+                    "delivery": "قيادة التسليم وقياس الأثر."
+                },
+                "req": {
+                    "comm": "مهارات تواصل ممتازة.",
+                    "metrics": "إجادة مقاييس المنتج ومؤشراته.",
+                    "tools": "إلمام بأدوات إدارة المنتج."
+                }
+            }
+        }
+    },
+    "apply": {
+        "badge": "التقديم",
+        "title": "التقديم على",
+        "unknownRole": "وظيفة غير محددة",
+        "success": "شكرًا! استلمنا طلبك.",
+        "fields": {
+            "name": "الاسم الكامل",
+            "email": "البريد الإلكتروني",
+            "links": "روابط (GitHub، معرض الأعمال)",
+            "note": "ملاحظة قصيرة",
+            "cv": "إرفاق السيرة الذاتية (PDF)",
+            "choose": "اختر ملفًا"
+        },
+        "actions": {
+            "submit": "إرسال الطلب",
+            "sending": "جاري الإرسال…"
         }
     }
 }
